--- a/django/postgres-pv.yaml
+++ b/django/postgres-pv.yaml
@@ -14,9 +14,9 @@ spec:
   nodeAffinity:
     required:
       nodeSelectorTerms:
-        - matchExpressions:
-            - key: kubernetes.io/hostname
-              operator: In
-              values:
-                - localhost
-                - desktop
+      - matchExpressions:
+        - key: role
+          operator: In
+          values:
+          - all
+          - general
