--- a/django/django-deployment.yaml
+++ b/django/django-deployment.yaml
@@ -17,6 +17,16 @@ spec:
       securityContext:
         runAsUser: 1000
         runAsGroup: 1000
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: role
+                operator: In
+                values:
+                - all
+                - general
       initContainers:
         - name: django-clone-repository
           image: worldhistoricalgazetteer/web:latest
