--- a/tileserver/tileserver-gl-deployment.yaml
+++ b/tileserver/tileserver-gl-deployment.yaml
@@ -14,6 +14,16 @@ spec:
       labels:
         app: tileserver-gl
     spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: role
+                operator: In
+                values:
+                - all
+                - general
       containers:
       - name: tileserver-gl
         image: maptiler/tileserver-gl:v5.0.0
