--- a/plausible-analytics/plausible-pv-pvc.yaml
+++ b/plausible-analytics/plausible-pv-pvc.yaml
@@ -1,16 +1,17 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pgbackrest-pv
+  name: plausible-pv
 spec:
   capacity:
     storage: 10Gi
+  volumeMode: Filesystem
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: django-pgbackrest
-  local:
-    path: /data/k8s/pgbackrest
+  storageClassName: plausible-storage
+  hostPath:
+    path: /data/k8s/plausible
   nodeAffinity:
     required:
       nodeSelectorTerms:
@@ -24,18 +25,11 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pgbackrest-pvc
+  name: plausible-pvc
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 10Gi
-  storageClassName: django-pgbackrest
----
-apiVersion: storage.k8s.io/v1
-kind: StorageClass
-metadata:
-  name: django-pgbackrest
-provisioner: kubernetes.io/no-provisioner
-volumeBindingMode: WaitForFirstConsumer
+  storageClassName: plausible-storage
