--- a/prometheus-grafana/prometheus-pv-pvc.yaml
+++ b/prometheus-grafana/prometheus-pv-pvc.yaml
@@ -26,6 +26,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: prometheus-pvc
+  namespace: monitoring
 spec:
   accessModes:
     - ReadWriteOnce
@@ -33,3 +34,11 @@ spec:
     requests:
       storage: 10Gi
   storageClassName: prometheus-storage
+---
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: prometheus-storage
+provisioner: kubernetes.io/no-provisioner  # using hostPath
+reclaimPolicy: Retain  # Ensures data is kept when PVC is deleted
+volumeBindingMode: WaitForFirstConsumer  # Prevents PV binding until PVC is created
