GlitchTip Implemented OK

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 
 # Ignore Django secret configuration files
 .whg-private/
+
+# Ignore Kubernetes Prometheus Grafana
+prometheus-grafana/kube-prometheus/*
