Continue Helm Vespa rebuild

--- a/vespa/templates/config-pv-pvc.yaml
+++ b/vespa/templates/config-pv-pvc.yaml
@@ -1,12 +1,14 @@
+{{- range $.Values.configserver.pvs }}
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: vespa-config-storage
-  namespace: vespa
+  name: vespa-config-{{ .name }}-storage
+  namespace: {{ $.Values.namespace }}
 provisioner: kubernetes.io/no-provisioner  # using hostPath
 reclaimPolicy: Retain  # Ensures data is kept when PVC is deleted
 volumeBindingMode: WaitForFirstConsumer  # Prevents PV binding until PVC is created
 ---
+{{- end }}
 {{- $replicas := ($.Values.replicaCounts.configserver | int)}}
 {{- range $index := until $replicas }}
 {{- range $.Values.configserver.pvs }}
@@ -14,7 +16,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: vespa-{{ .name }}-pv-{{ $index }}
-  namespace: vespa
+  namespace: {{ $.Values.namespace }}
 spec:
   capacity:
     storage: {{ .storageSize }}
@@ -22,25 +24,25 @@ spec:
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: vespa-config-storage
+  storageClassName: vespa-config-{{ .name }}-storage
   local:
     path: "{{ $.Values.configserver.pvRootPath }}/{{ $index }}/{{ .name }}"
   nodeAffinity: {{ toYaml $.Values.nodeAffinities.admin | nindent 4 }}
 ---
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: vespa-{{ .name }}-pvc-{{ $index }}
-  namespace: vespa
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: {{ .storageSize }}
-  storageClassName: vespa-config-storage
-  volumeMode: Filesystem
-  volumeName: vespa-{{ .name }}-pv-{{ $index }}
----
+{{/*apiVersion: v1*/}}
+{{/*kind: PersistentVolumeClaim*/}}
+{{/*metadata:*/}}
+{{/*  name: vespa-{{ .name }}-pvc-{{ $index }}*/}}
+{{/*  namespace: {{ $.Values.namespace }}*/}}
+{{/*spec:*/}}
+{{/*  accessModes:*/}}
+{{/*    - ReadWriteOnce*/}}
+{{/*  resources:*/}}
+{{/*    requests:*/}}
+{{/*      storage: {{ .storageSize }}*/}}
+{{/*  storageClassName: vespa-config-storage*/}}
+{{/*  volumeMode: Filesystem*/}}
+{{/*  volumeName: vespa-{{ .name }}-pv-{{ $index }}*/}}
+{{/*---*/}}
 {{- end }}
 {{- end }}
