--- a/vespa/templates/headless.yml
+++ b/vespa/templates/headless.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: vespa-internal
-  namespace: vespa
+  namespace: {{ .Values.namespace }}
   labels:
     name: vespa-internal
 spec:
