Continue Helm Vespa rebuild

--- a/vespa/templates/configmap.yml
+++ b/vespa/templates/configmap.yml
@@ -4,11 +4,8 @@ metadata:
   name: vespa-config
   namespace: {{ .Values.namespace }}
 data:
-  VESPA_CONFIGSERVERS: >
-    {{- $servers := (.Values.replicaCounts.configserver | int) }}
-    {{- range $i := until $servers }}
-    vespa-configserver-{{ $i }}.vespa-internal.{{ $.Values.namespace }}.svc.cluster.local{{- if ne (add $i 1) $servers }}, {{- end }}
-    {{- end }}
+  # NOTE: Do not split the following line as that would break internal parsing
+  VESPA_CONFIGSERVERS: "{{- $servers := (.Values.replicaCounts.configserver | int) }}{{- range $i := until $servers }}vespa-configserver-{{ $i }}.vespa-internal.{{ $.Values.namespace }}.svc.cluster.local{{- if ne (add $i 1) $servers }}, {{- end }}{{- end }}"
   {{- if .Values.configserver.configserverJvmArgs }}
   VESPA_CONFIGSERVER_JVMARGS: "{{ .Values.configserver.configserverJvmArgs }}"
   {{- end }}
