--- a/glitchtip/charts/valkey/values.yaml
+++ b/glitchtip/charts/valkey/values.yaml
@@ -47,7 +47,7 @@ nameOverride: ""
 fullnameOverride: ""
 ## @param namespaceOverride String to fully override common.names.namespace
 ##
-namespaceOverride: ""
+namespaceOverride: monitoring
 ## @param commonLabels Labels to add to all deployed objects
 ##
 commonLabels: {}
