--- a/glitchtip/templates/beat/deployment.yaml
+++ b/glitchtip/templates/beat/deployment.yaml
@@ -4,6 +4,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "django.fullname" . }}-beat
+  namespace: {{ default .Release.Namespace .Values.namespaceOverride }}
   labels:
     {{- include "django.labels" . | nindent 4 }}
     app.kubernetes.io/component: beat
