--- a/glitchtip/charts/postgresql/values.yaml
+++ b/glitchtip/charts/postgresql/values.yaml
@@ -67,7 +67,7 @@ nameOverride: ""
 fullnameOverride: ""
 ## @param namespaceOverride String to fully override common.names.namespace
 ##
-namespaceOverride: ""
+namespaceOverride: monitoring
 ## @param clusterDomain Kubernetes Cluster Domain
 ##
 clusterDomain: cluster.local
