--- a/glitchtip/templates/configmap.yaml
+++ b/glitchtip/templates/configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ include "django.fullname" . }}
+  namespace: {{ default .Release.Namespace .Values.namespaceOverride }}
   labels:
     {{- include "django.labels" . | nindent 4 }}
   annotations:
