--- a/glitchtip/templates/flower/service.yaml
+++ b/glitchtip/templates/flower/service.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "django.fullname" . }}-flower
+  namespace: {{ default .Release.Namespace .Values.namespaceOverride }}
   labels:
     {{- include "django.labels" . | nindent 4 }}
 spec:
