--- a/glitchtip/templates/glitchtip-pv-pvc.yaml
+++ b/glitchtip/templates/glitchtip-pv-pvc.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: glitchtip-pv
+  namespace: {{ default .Release.Namespace .Values.namespaceOverride }}
 spec:
   capacity:
     storage: 10Gi
@@ -26,6 +27,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: glitchtip-pvc
+  namespace: {{ default .Release.Namespace .Values.namespaceOverride }}
 spec:
   accessModes:
     - ReadWriteOnce
@@ -38,6 +40,7 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: glitchtip-storage
+  namespace: {{ default .Release.Namespace .Values.namespaceOverride }}
 provisioner: kubernetes.io/no-provisioner  # using hostPath
 reclaimPolicy: Retain  # Ensures data is kept when PVC is deleted
 volumeBindingMode: WaitForFirstConsumer  # Prevents PV binding until PVC is created
