--- a/glitchtip/templates/migrate-job.yaml
+++ b/glitchtip/templates/migrate-job.yaml
@@ -7,6 +7,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: {{ include "django.fullname" . }}-migrate
+  namespace: {{ default .Release.Namespace .Values.namespaceOverride }}
   labels:
     {{- include "django.labels" . | nindent 4 }}
   annotations:
