--- a/glitchtip/templates/serviceaccount.yaml
+++ b/glitchtip/templates/serviceaccount.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "django.serviceAccountName" . }}
+  namespace: {{ default .Release.Namespace .Values.namespaceOverride }}
   labels:
     {{- include "django.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
