--- a/glitchtip/templates/tests/test-connection.yaml
+++ b/glitchtip/templates/tests/test-connection.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: "{{ include "django.fullname" . }}-test-connection"
+  namespace: {{ default .Release.Namespace .Values.namespaceOverride }}
   labels:
 {{ include "django.labels" . | nindent 4 }}
   annotations:
