--- a/glitchtip/templates/web/deployment.yaml
+++ b/glitchtip/templates/web/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "django.fullname" . }}-web
+  namespace: {{ default .Release.Namespace .Values.namespaceOverride }}
   labels:
     {{- include "django.labels" . | nindent 4 }}
     app.kubernetes.io/component: web
