--- a/glitchtip/templates/web/pdb.yaml
+++ b/glitchtip/templates/web/pdb.yaml
@@ -5,6 +5,7 @@ apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
   name: {{ include "django.fullname" . }}-web
+  namespace: {{ default .Release.Namespace .Values.namespaceOverride }}
   labels:
     {{- include "django.labels" . | nindent 4 }}
 spec:
