--- a/glitchtip/templates/web/service.yaml
+++ b/glitchtip/templates/web/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "django.fullname" . }}-web
+  namespace: {{ default .Release.Namespace .Values.namespaceOverride }}
   labels:
     {{- include "django.labels" . | nindent 4 }}
 spec:
