--- a/tileserver/repository/reconfiguration/base-config.json
+++ b/tileserver/repository/reconfiguration/base-config.json
@@ -8,7 +8,7 @@
       "styles": "./assets/styles",
       "mbtiles": "./tiles",
       "files": "./assets/files",
-      "images": "./public/resources/images"
+      "images": "/usr/src/app/public/resources/images"
     }
   },
   "serveAllFonts": true,
